// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Button /> > should render correctly with dark theme 1`] = `
<body>
  <div>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium eja6qb0 css-1eznx67-MuiButtonBase-root-MuiButton-root-StyledButton"
      tabindex="0"
      type="button"
    >
      Switch to 
      Light
       Theme
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</body>
`;

exports[`<Button /> > should render correctly with light theme 1`] = `
<body>
  <div>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium eja6qb0 css-1eznx67-MuiButtonBase-root-MuiButton-root-StyledButton"
      tabindex="0"
      type="button"
    >
      Switch to 
      Dark
       Theme
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</body>
`;
